--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
 
         <activity android:name=".PasswordResetActivity"/>
 
+        <activity android:name=".RegisterActivity" />
+
     </application>
 
 </manifest>
